--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc mocha",
+    "coveralls": "nyc mocha && nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +13,9 @@
   "description": "",
   "devDependencies": {
     "chai": "^6.2.1",
-    "mocha": "^11.7.5"
+    "coveralls": "^3.1.1",
+    "mocha": "^11.7.5",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^17.1.0"
   }
 }
