--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exerciseviii",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "mocha",
     "coverage": "nyc mocha",
