--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "exerciseviii",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "mocha",
-    "coverage": "nyc mocha",
-    "coveralls": "nyc mocha && nyc report --reporter=text-lcov | coveralls"
+    "coverage": "c8 mocha",
+    "coveralls": "c8 mocha && c8 report --reporter=text-lcov | coveralls"
+  },
+  "c8": {
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "src/.internal/**"
+    ],
+    "reporter": [
+      "text",
+      "lcov"
+    ],
+    "all": true
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "c8": "^10.1.3",
     "chai": "^6.2.1",
     "coveralls": "^3.1.1",
     "mocha": "^11.7.5",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^17.1.0"
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
